added golden needle weapon with skill